--- a/css/products.css
+++ b/css/products.css
@@ -97,6 +97,13 @@ body {
 
 }
 
+.content-image {
+  width: 100%;
+  height: 400px; 
+  object-fit: cover; 
+}
+
+
 
 .content-text {
     text-align: center;
